Fix layout shift when modal shown

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-html {
-    overflow-y: scroll;
-}
-
 body {
+    overflow-y: scroll;
     background: var(--system-color-surface-container);
 }
 
